<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration_flow"
    app:startDestination="@id/regDataFragment">

    <fragment
        android:id="@+id/regDataFragment"
        android:name="omega.isaacbenito.saberapp.authentication.registration.RegDataFragment"
        android:label="RegDataFragment" >
        <action
            android:id="@+id/action_regDataFragment_to_regCentreFragment"
            app:destination="@id/regCentreFragment" />
    </fragment>

    <fragment
        android:id="@+id/regCentreFragment"
        android:name="omega.isaacbenito.saberapp.authentication.registration.RegCentreFragment"
        android:label="RegCentreFragment" />

</navigation>